--- a/src/dune
+++ b/src/dune
@@ -2,6 +2,8 @@
  (name express)
  (public_name melange-express)
  (modes melange)
+ (libraries
+   melange.node)
  (preprocess
   (pps melange.ppx))
  (melange.compile_flags :standard))
